GNU bug report logs - #55596
Guix/Guile segfaults on `guix import texlive`

Previous Next

Package: guix;

Reported by: Jack Hill <jackhill <at> jackhill.us>

Date: Mon, 23 May 2022 18:30:02 UTC

Severity: normal

Merged with 55587

Done: Ludovic Courtès <ludo <at> gnu.org>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 55596 in the body.
You can then email your comments to 55596 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Mon, 23 May 2022 18:30:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to Jack Hill <jackhill <at> jackhill.us>:
New bug report received and forwarded. Copy sent to bug-guix <at> gnu.org. (Mon, 23 May 2022 18:30:03 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Jack Hill <jackhill <at> jackhill.us>
To: bug-guix <at> gnu.org
Subject: subversion segfaul on `guix import texlive`
Date: Mon, 23 May 2022 14:29:21 -0400 (EDT)
Hi Guix,

With Guix commit 4ba4cb1d49d70a00f7236f60bd92e5eccef573dd on Linux x86-64, 
I have the following problem trying to import a texlive package:

"""
$ guix import texlive qrcode
command "svn" "export" "--non-interactive" "--trust-server-cert" "-r" "59745" "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/qrcode/" "/tmp/guix-directory.6aY7Gk/doc/latex/qrcode/" failed with signal 11
guix import: error: failed to import package 'qrcode'
"""

It seems something is unwell with our subversion package?

Best,
Jack




Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Mon, 23 May 2022 18:44:02 GMT) Full text and rfc822 format available.

Message #8 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Tobias Geerinckx-Rice <me <at> tobias.gr>
To: Jack Hill <jackhill <at> jackhill.us>
Cc: 55596 <at> debbugs.gnu.org, bug-guix <at> gnu.org
Subject: Re: bug#55596: subversion segfaul on `guix import texlive`
Date: Mon, 23 May 2022 20:40:55 +0200
[Message part 1 (text/plain, inline)]
Jack Hill 写道:
> """
> $ guix import texlive qrcode
> command "svn" "export" "--non-interactive" "--trust-server-cert" 
> "-r"
> "59745"
> "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/qrcode/"
> "/tmp/guix-directory.6aY7Gk/doc/latex/qrcode/" failed with 
> signal 11
> guix import: error: failed to import package 'qrcode'
> """
>
> It seems something is unwell with our subversion package?

I don't know why I didn't think of this sooner, but I ran that svn 
command by hand (only replacing the output directory, say 
/tmp/foo) and… it ran fine.

So I checked my dmesg and it's actually Guix that's getting 
killed:

[146565.315921] guix[1767]: segfault at c0 ip 000076c46ae99e70 sp 
00007fffcbe9cb30 error 4 cpu 5 in 
libc-2.33.so[76c46ae57000+141000]
[146565.315937] Code: 56 41 55 41 54 55 48 89 fd 53 48 81 ec f8 04 
00 00 48 8b 05 ea 1f 15 00 48 89 34 24 89 4c 24 48 64 8b 00 89 84 
24 80 00 00 00 <8b> 87 c0 00 00 00 85 c0 0f 85 4a 02 00 00 c7 87 
c0 00 00 00 ff ff

Kind regards,

T G-R
[signature.asc (application/pgp-signature, inline)]

Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Mon, 23 May 2022 18:44:02 GMT) Full text and rfc822 format available.

Changed bug title to 'Guix/Guile segfaults on `guix import texlive`' from 'subversion segfaul on `guix import texlive`' Request was from Tobias Geerinckx-Rice <me <at> tobias.gr> to control <at> debbugs.gnu.org. (Mon, 23 May 2022 18:48:02 GMT) Full text and rfc822 format available.

Merged 55587 55596. Request was from Ludovic Courtès <ludo <at> gnu.org> to control <at> debbugs.gnu.org. (Tue, 24 May 2022 13:35:02 GMT) Full text and rfc822 format available.

Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Wed, 25 May 2022 10:37:02 GMT) Full text and rfc822 format available.

Message #18 received at 55596 <at> debbugs.gnu.org (full text, mbox):

From: Ludovic Courtès <ludo <at> gnu.org>
To: Hugo Nobrega <hugonobrega <at> ic.ufrj.br>
Cc: 55596 <at> debbugs.gnu.org, 55587 <at> debbugs.gnu.org
Subject: Re: bug#55596: Guix/Guile segfaults on `guix import texlive`
Date: Wed, 25 May 2022 12:36:00 +0200
Hello,

Hugo Nobrega <hugonobrega <at> ic.ufrj.br> skribis:

> hugo <at> hp-guix ~$ guix import texlive cite
> command "svn" "export" "--non-interactive" "--trust-server-cert" "-r"
> "59745"
> "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/cite/"
> "/tmp/guix-directory.09UnsN/doc/latex/cite/" failed with signal 11 guix
> import: error: failed to import package 'cite'

Jack Hill <jackhill <at> jackhill.us> skribis:

> With Guix commit 4ba4cb1d49d70a00f7236f60bd92e5eccef573dd on Linux
> x86-64, I have the following problem trying to import a texlive
> package:
>
> """
> $ guix import texlive qrcode
> command "svn" "export" "--non-interactive" "--trust-server-cert" "-r" "59745" "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/qrcode/" "/tmp/guix-directory.6aY7Gk/doc/latex/qrcode/" failed with signal 11
> guix import: error: failed to import package 'qrcode'
> """
>
> It seems something is unwell with our subversion package?

Works for me on x86_64-linux!

--8<---------------cut here---------------start------------->8---
$ guix describe
Generation 215	May 22 2022 23:16:03	(current)
  guix 81f7bb1
    repository URL: https://git.savannah.gnu.org/git/guix.git
    branch: master
    commit: 81f7bb1691dc9dc69fc6e584ad8c6e36e495c103
$ guix shell subversion -- guix import texlive qrcode
A    /tmp/guix-directory.rXo6NK/doc/latex/qrcode
A    /tmp/guix-directory.rXo6NK/doc/latex/qrcode/README
A    /tmp/guix-directory.rXo6NK/doc/latex/qrcode/qrcode.pdf
Exported revision 59745.
A    /tmp/guix-directory.rXo6NK/source/latex/qrcode
A    /tmp/guix-directory.rXo6NK/source/latex/qrcode/qrcode.dtx
A    /tmp/guix-directory.rXo6NK/source/latex/qrcode/qrcode.ins
Exported revision 59745.
A    /tmp/guix-directory.rXo6NK/tex/latex/qrcode
A    /tmp/guix-directory.rXo6NK/tex/latex/qrcode/qrcode.sty
Exported revision 59745.
(package
  (inherit
    (simple-texlive-package
      "texlive-qrcode"
      (list "doc/latex/qrcode/" "source/latex/qrcode/" "tex/latex/qrcode/")
      (base32 "197v18lsvb90i07gxvc6mrmn1z63q8v0wvcnbk8dnn3hhabpn16y")))
  (home-page "https://ctan.org/macros/latex/contrib/qrcode")
  (synopsis "Generate QR codes in LaTeX")
  (description
    "The package generates QR (Quick Response) codes in LaTeX, without the need for
PSTricks or any other graphical package.")
  (license lppl1.3+))
$ guix shell subversion -- guix import texlive cite
A    /tmp/guix-directory.GpxhKw/doc/latex/cite
A    /tmp/guix-directory.GpxhKw/doc/latex/cite/README
A    /tmp/guix-directory.GpxhKw/doc/latex/cite/chapterbib.ltx
A    /tmp/guix-directory.GpxhKw/doc/latex/cite/chapterbib.pdf
A    /tmp/guix-directory.GpxhKw/doc/latex/cite/cite.ltx
A    /tmp/guix-directory.GpxhKw/doc/latex/cite/cite.pdf
Exported revision 59745.
A    /tmp/guix-directory.GpxhKw/tex/latex/cite
A    /tmp/guix-directory.GpxhKw/tex/latex/cite/chapterbib.sty
A    /tmp/guix-directory.GpxhKw/tex/latex/cite/cite.sty
A    /tmp/guix-directory.GpxhKw/tex/latex/cite/drftcite.sty
A    /tmp/guix-directory.GpxhKw/tex/latex/cite/overcite.sty
Exported revision 59745.
(package
  (inherit
    (simple-texlive-package
      "texlive-cite"
      (list "doc/latex/cite/" "tex/latex/cite/")
      (base32 "0b1amznayxj80dmqbzcysmj7q8aksbyz98k6djsqi0mhwp1cd0fd")
      #:trivial?
      #t))
  (home-page "https://ctan.org/macros/latex/contrib/cite")
  (synopsis "Improved citation handling in LaTeX")
  (description
    "The package supports compressed, sorted lists of numerical citations, and also
deals with various punctuation and other issues of representation, including
comprehensive management of break points.  The package is compatible with both
hyperref and backref.  The package is (unsurprisingly) part of the cite bundle
of the author's citation-related packages.")
  (license (error unknown-license "other-free")))
--8<---------------cut here---------------end--------------->8---

Jack, Hugo: What does “type -P svn” say?

Does the bug occur within ‘guix shell subversion’ as shown above?

TIA,
Ludo’.




Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Thu, 26 May 2022 05:22:02 GMT) Full text and rfc822 format available.

Message #21 received at 55596 <at> debbugs.gnu.org (full text, mbox):

From: Hugo <hugonobrega <at> ic.ufrj.br>
To: Ludovic Courtès <ludo <at> gnu.org>
Cc: 55596 <at> debbugs.gnu.org, 55587 <at> debbugs.gnu.org
Subject: Re: bug#55596: Guix/Guile segfaults on `guix import texlive`
Date: Wed, 25 May 2022 21:20:57 -0300
Ludovic Courtès <ludo <at> gnu.org> writes:

> Jack, Hugo: What does “type -P svn” say?
>
> Does the bug occur within ‘guix shell subversion’ as shown above?

Well, I feel kind of silly now, after actually installing subversion the
command works as expected :)

But I suppose the silent failure is still something that could/should be
improved.

Thanks,
Hugo




Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Thu, 26 May 2022 13:37:02 GMT) Full text and rfc822 format available.

Message #24 received at 55596 <at> debbugs.gnu.org (full text, mbox):

From: Jack Hill <jackhill <at> jackhill.us>
To: Hugo <hugonobrega <at> ic.ufrj.br>
Cc: 55596 <at> debbugs.gnu.org, Ludovic Courtès <ludo <at> gnu.org>,
 55587 <at> debbugs.gnu.org
Subject: Re: bug#55587: bug#55596: Guix/Guile segfaults on `guix import
 texlive`
Date: Thu, 26 May 2022 09:36:28 -0400 (EDT)
[Message part 1 (text/plain, inline)]
On Wed, 25 May 2022, Hugo wrote:

> Ludovic Courtès <ludo <at> gnu.org> writes:
>
>> Jack, Hugo: What does “type -P svn” say?
>>
>> Does the bug occur within ‘guix shell subversion’ as shown above?
>
> Well, I feel kind of silly now, after actually installing subversion the
> command works as expected :)

Same for me, and I feel equally silly :)

> But I suppose the silent failure is still something that could/should be
> improved.

+1 for this. Maybe some day we'll have have guile-svn, but until then an 
error message would be fine.

Best,
Jack

Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Sat, 28 May 2022 17:20:03 GMT) Full text and rfc822 format available.

Message #27 received at 55596 <at> debbugs.gnu.org (full text, mbox):

From: Ludovic Courtès <ludo <at> gnu.org>
To: Jack Hill <jackhill <at> jackhill.us>
Cc: 55596 <at> debbugs.gnu.org, 55587 <at> debbugs.gnu.org, Hugo <hugonobrega <at> ic.ufrj.br>
Subject: Re: bug#55596: Guix/Guile segfaults on `guix import texlive`
Date: Sat, 28 May 2022 19:19:21 +0200
Hi,

Jack Hill <jackhill <at> jackhill.us> skribis:

> On Wed, 25 May 2022, Hugo wrote:
>
>> Ludovic Courtès <ludo <at> gnu.org> writes:
>>
>>> Jack, Hugo: What does “type -P svn” say?
>>>
>>> Does the bug occur within ‘guix shell subversion’ as shown above?
>>
>> Well, I feel kind of silly now, after actually installing subversion the
>> command works as expected :)
>
> Same for me, and I feel equally silly :)

You mentioned an error report from Guix:

  command "svn" "export" "--non-interactive" "--trust-server-cert" "-r" "59745" "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/cite/" "/tmp/guix-directory.09UnsN/doc/latex/cite/" failed with signal 11

To me that means that an “svn” command was indeed found in $PATH but
that it segfaulted.

What did “type -P svn” return?  Perhaps there was an “svn” command
coming from the host distro, like /usr/bin/svn?

Or am I missing something?

Thanks,
Ludo’.




Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Sat, 28 May 2022 18:57:02 GMT) Full text and rfc822 format available.

Message #30 received at 55596 <at> debbugs.gnu.org (full text, mbox):

From: Tobias Geerinckx-Rice <me <at> tobias.gr>
To: Ludovic Courtès <ludo <at> gnu.org>
Cc: 55596 <at> debbugs.gnu.org, Jack Hill <jackhill <at> jackhill.us>,
 55587 <at> debbugs.gnu.org, Hugo <hugonobrega <at> ic.ufrj.br>, bug-guix <at> gnu.org
Subject: Re: bug#55587: bug#55596: Guix/Guile segfaults on `guix import
 texlive`
Date: Sat, 28 May 2022 20:51:53 +0200
[Message part 1 (text/plain, inline)]
Hi,

I thought I'd replied to this.

I think you might be barking up the wrong tree (or, likely, that 
there are multiple trees here).  I could reproduce the segfault on 
Guix System and encouraged Jack to file this bug.

It's not foreign-distro-related.  The process actually segfaulting 
is Guix, not svn, possibly due to a missing svn.

Kind regards,

T G-R
[signature.asc (application/pgp-signature, inline)]

Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Sun, 29 May 2022 10:20:02 GMT) Full text and rfc822 format available.

Message #33 received at 55596 <at> debbugs.gnu.org (full text, mbox):

From: Hugo <hugonobrega <at> ic.ufrj.br>
To: Tobias Geerinckx-Rice <me <at> tobias.gr>, Ludovic Courtès
 <ludo <at> gnu.org>
Cc: 55596 <at> debbugs.gnu.org, Jack Hill <jackhill <at> jackhill.us>,
 55587 <at> debbugs.gnu.org, bug-guix <at> gnu.org
Subject: Re: bug#55587: bug#55596: Guix/Guile segfaults on `guix import
 texlive`
Date: Sun, 29 May 2022 07:19:01 -0300
Hello,

> It's not foreign-distro-related.  The process actually segfaulting 
> is Guix, not svn, possibly due to a missing svn.

Indeed, I think Tobias is on the right track here.
However, I can no longer reproduce the `signal 11` error

To answer Ludò, though,

> What did “type -P svn” return?

Before I installed subversion: nothing. Now it shows the correct path to
svn.

> Perhaps there was an “svn” command coming from the host distro, like
> /usr/bin/svn?

Nope, this is on Guix System.

Best wishes,
Hugo




Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Wed, 15 Jun 2022 20:40:02 GMT) Full text and rfc822 format available.

Message #36 received at 55596 <at> debbugs.gnu.org (full text, mbox):

From: Ludovic Courtès <ludo <at> gnu.org>
To: Tobias Geerinckx-Rice <me <at> tobias.gr>
Cc: 55596 <at> debbugs.gnu.org, jackhill <at> jackhill.us, 55587 <at> debbugs.gnu.org,
 hugonobrega <at> ic.ufrj.br
Subject: Re: bug#55596: Guix/Guile segfaults on `guix import texlive`
Date: Wed, 15 Jun 2022 22:39:21 +0200
Hello,

Tobias Geerinckx-Rice <me <at> tobias.gr> skribis:

> I think you might be barking up the wrong tree (or, likely, that there
> are multiple trees here).  I could reproduce the segfault on Guix
> System and encouraged Jack to file this bug.
>
> It's not foreign-distro-related.  The process actually segfaulting is
> Guix, not svn, possibly due to a missing svn.

I don’t think so; the error message that was reported is:

  command "svn" "export" "--non-interactive" "--trust-server-cert" "-r" "59745" "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/cite/" "/tmp/guix-directory.09UnsN/doc/latex/cite/" failed with signal 11

It’s a message from ‘report-invoke-error’ in (guix build utils).  It’s
really svn that’s segfaulting.

Should we close and reopen if/when we have more info?

Thanks,
Ludo’.




Information forwarded to bug-guix <at> gnu.org:
bug#55596; Package guix. (Thu, 14 Jul 2022 04:25:01 GMT) Full text and rfc822 format available.

Message #39 received at 55596 <at> debbugs.gnu.org (full text, mbox):

From: Akira Kyle <akira <at> akirakyle.com>
To: 55596 <at> debbugs.gnu.org
Subject: Guix/Guile segfaults on `guix import texlive`
Date: Wed, 13 Jul 2022 22:24:39 -0600
Hi,

> I don’t think so; the error message that was reported is:
> 
>   command "svn" "export" "--non-interactive" "--trust-server-cert" "-r" "59745" "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/cite/" "/tmp/guix-directory.09UnsN/doc/latex/cite/" failed with signal 11
> 
> It’s a message from ‘report-invoke-error’ in (guix build utils).  It’s
> really svn that’s segfaulting.

I recently encountered this issue and did some digging. I don't think svn is actually segfaulting, just that the command svn doesn't exist so when 'system*' is called inside 'invoke' in (guix build utils) it for some reason gives signal 11.

On a recent guix system, I can reproduce this error by running 'guix import texlive' when inside 'guix shell guix --pure'. However there is no error when inside 'guix shell guix subversion --pure'. I think this is ultimately due to 'download-multi-svn-to-store' (and 'download-svn-to-store' but the texlive importer only calls the former) not setting '#:svn-command' when it calls 'build:svn-fetch' so it uses the default argument of 'svn' rather than trying to explicitly use an svn from the store.

Unfortunately my guile and gexp knowledge is quite lacking so I'm not sure that I have the know-how to create a patch to fix this, however hopefully this is enough for someone else to easily fix this issue.

Thanks,
Akira





Reply sent to Ludovic Courtès <ludo <at> gnu.org>:
You have taken responsibility. (Fri, 05 Aug 2022 12:23:02 GMT) Full text and rfc822 format available.

Notification sent to Jack Hill <jackhill <at> jackhill.us>:
bug acknowledged by developer. (Fri, 05 Aug 2022 12:23:02 GMT) Full text and rfc822 format available.

Message #44 received at 55596-done <at> debbugs.gnu.org (full text, mbox):

From: Ludovic Courtès <ludo <at> gnu.org>
To: Tobias Geerinckx-Rice <me <at> tobias.gr>
Cc: jackhill <at> jackhill.us, 55596-done <at> debbugs.gnu.org, hugonobrega <at> ic.ufrj.br,
 55587 <at> debbugs.gnu.org
Subject: Re: bug#55596: Guix/Guile segfaults on `guix import texlive`
Date: Fri, 05 Aug 2022 14:22:43 +0200
Hi,

Ludovic Courtès <ludo <at> gnu.org> skribis:

> I don’t think so; the error message that was reported is:
>
>   command "svn" "export" "--non-interactive" "--trust-server-cert" "-r" "59745" "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/cite/" "/tmp/guix-directory.09UnsN/doc/latex/cite/" failed with signal 11
>
> It’s a message from ‘report-invoke-error’ in (guix build utils).  It’s
> really svn that’s segfaulting.

Maybe not!  I can trigger it reproducibly:

--8<---------------cut here---------------start------------->8---
ludo <at> ribbon ~/src/guix [env]$ guix describe
Generation 223  Aug 01 2022 00:30:24    (current)
  guix ab59155
    repository URL: https://git.savannah.gnu.org/git/guix.git
    branch: master
    commit: ab59155c5a38dda7efaceb47c7528578fcf0def4
ludo <at> ribbon ~/src/guix [env]$ rm -f core
ludo <at> ribbon ~/src/guix [env]$ guix import texlive abstract
command "svn" "export" "--non-interactive" "--trust-server-cert" "-r" "59745" "svn://www.tug.org/texlive/tags/texlive-2021.3/Master/texmf-dist/doc/latex/abstract/" "/tmp/guix-directory.HYEHpM/doc/latex/abstract/" failed with signal 11
guix import: error: failed to download description for package 'abstract'
ludo <at> ribbon ~/src/guix [env]$ file core
core: ELF 64-bit LSB core file, x86-64, version 1 (SYSV), SVR4-style, from '/gnu/store/9z95jms1r801z1kxpiq5xw594cxaw5jx-guile-wrapper/bin/guile --no-auto-c', real uid: 1000, effective uid: 1000, real gid: 998, effective gid: 998, execfn: '/home/ludo/.config/guix/current/bin/guix', platform: 'x86_64'
--8<---------------cut here---------------end--------------->8---

Actually it happens when ‘svn’ is not in $PATH, triggering a crash in
Guile as it tries to display an error in the child process:

--8<---------------cut here---------------start------------->8---
$ gdb /gnu/store/9z95jms1r801z1kxpiq5xw594cxaw5jx-guile-wrapper/bin/guile core

[...]

Core was generated by `/gnu/store/9z95jms1r801z1kxpiq5xw594cxaw5jx-guile-wrapper/bin/guile --no-auto-c'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  __vfprintf_internal (s=0x0, format=0x7f9da91744e2 "In execvp of %s: %s\n", 
    ap=ap <at> entry=0x7ffd286a3c78, mode_flags=mode_flags <at> entry=0) at vfprintf-internal.c:1359
1359    vfprintf-internal.c: No such file or directory.
(gdb) bt
#0  __vfprintf_internal (s=0x0, format=0x7f9da91744e2 "In execvp of %s: %s\n", 
    ap=ap <at> entry=0x7ffd286a3c78, mode_flags=mode_flags <at> entry=0) at vfprintf-internal.c:1359
#1  0x00007f9da8ed3589 in __fprintf (stream=<optimized out>, format=<optimized out>)
    at fprintf.c:32
#2  0x00007f9da913fd93 in ?? ()
   from /gnu/store/1jgcbdzx2ss6xv59w55g3kr3x4935dfb-guile-3.0.8/lib/libguile-3.0.so.1
#3  0x00007f9da9140e01 in scm_system_star ()
   from /gnu/store/1jgcbdzx2ss6xv59w55g3kr3x4935dfb-guile-3.0.8/lib/libguile-3.0.so.1

[...]
--8<---------------cut here---------------end--------------->8---

This is because the fdopen(2, "a") call in ‘start_child’ returns NULL:

--8<---------------cut here---------------start------------->8---
$ ltrace -f -e fdopen /bin/sh -c 'guix import texlive abstract'
[pid 22937] --- Called exec() ---
[pid 22945] libguile-3.0.so.1->fdopen(2, 0x7fddfd364a4a, -1, -112) = 0
[pid 22945] --- SIGSEGV (Segmentation fault) ---
--8<---------------cut here---------------end--------------->8---

It can be reproduced like this:

--8<---------------cut here---------------start------------->8---
scheme@(guile-user)> (parameterize ((current-output-port (current-error-port))) (system* "sdfsdf"))
$1 = 139
scheme@(guile-user)> (status:term-sig $1)
$2 = 11
scheme@(guile-user)> (version)
$3 = "3.0.8"
--8<---------------cut here---------------end--------------->8---

Fixed in Guile commit 56b1ea9002d2d3967b597aa0ee7595e815b21f23.

Back to the original issue Jack and Hugo reported: you need to add ‘svn’
to $PATH to make things work.  :-)

Thanks,
Ludo’.




Reply sent to Ludovic Courtès <ludo <at> gnu.org>:
You have taken responsibility. (Fri, 05 Aug 2022 12:23:03 GMT) Full text and rfc822 format available.

Notification sent to Hugo Nobrega <hugonobrega <at> ic.ufrj.br>:
bug acknowledged by developer. (Fri, 05 Aug 2022 12:23:03 GMT) Full text and rfc822 format available.

bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Sat, 03 Sep 2022 11:24:09 GMT) Full text and rfc822 format available.

This bug report was last modified 1 year and 235 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.